# room-3d-grafik

./: CMakeLists.txt  README.md  build.sh  run.sh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: vertex_shader.glsl
src/: main.cpp
windows/: CMakeLists_Windows.txt  PANDUAN_WINDOWS.md  build_windows.bat  build_windows_vs.bat  run_windows.bat  setup_glfw.bat
